# akvirtualcamera

./: .gitignore  CMakeLists.txt
Manager/: CMakeLists.txt
VCamUtils/: CMakeLists.txt
dshow/: CMakeLists.txt
dshow/Assistant/: CMakeLists.txt
dshow/Assistant/src/: main.cpp
dshow/PlatformUtils/: CMakeLists.txt
dshow/PlatformUtils/src/: utils.h
dshow/VCamIPC/: CMakeLists.txt
dshow/VCamIPC/src/: ipcbridge.cpp
dshow/VirtualCamera/: CMakeLists.txt
dshow/VirtualCamera/src/: basefilter.h
